--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,16 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+
+                <category android:name="android.intent.category.HOME" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"
-            android:launchMode="singleTop"></activity>
+            android:launchMode="singleTask"></activity>
         <activity android:name=".CarouselActivity"></activity>
         <activity android:name=".QrCodeActivity"
-            android:launchMode="singleTop"></activity>
+            android:launchMode="singleTask"></activity>
     </application>
 
 </manifest>
