--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".CarouselActivity"></activity>
         <activity android:name=".QrCodeActivity"
             android:launchMode="singleTask"></activity>
+        <receiver android:name=".receiver.SterilizeReceiver"></receiver>
     </application>
 
 </manifest>
